--- a/IonicLabs/www/templates/calendar.html
+++ b/IonicLabs/www/templates/calendar.html
@@ -1,6 +1,5 @@
 <ion-view view-title="Owlendar!!">
-  <ion-content>
-    <div ui-calendar ng-model="eventSources"></div>  
+  <ion-content scroll="false">
+    <div ui-calendar="uiConfig.calendar" ng-model="eventSources">  
   </ion-content>
-  
 </ion-view>
