--- a/IonicLabs/www/templates/calendar.html
+++ b/IonicLabs/www/templates/calendar.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Owlendar!!">
+<ion-view view-title="Owlendar Calendar!">
   <ion-content scroll="false">
     <div ui-calendar="uiConfig.calendar" ng-model="eventSources">  
   </ion-content>
