--- a/IonicLabs/www/templates/menu.html
+++ b/IonicLabs/www/templates/menu.html
@@ -16,7 +16,7 @@
     <ion-header-bar class="bar bar-header bar-dark">
       <h1 class="title">Links</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content scroll="false">
       <ion-list>
         <ion-item menu-close ng-click="login()">
           Link 1
