--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -18,17 +18,14 @@
     </ion-header-bar>
     <ion-content scroll="true">
       <ion-list>
-        <ion-item menu-close onClick="window.open('http://www.google.com','_blank');return false;">
-          Link 1
+        <ion-item menu-close ng-style="{'line-height': '100px'}"  onClick="window.open('https://owllife.kennesaw.edu/organization/VSLS/calendar/details/691967','_blank');return false;">
+         Red Cross Blood Drive!
         </ion-item>
-        <ion-item menu-close onClick="window.open('http://www.google.com','_blank');return false;">
-          Link 2
+        <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://vksu.kennesaw.edu/','_blank');return false;">
+          Volunteer With Us!
         </ion-item>
-        <ion-item menu-close onClick="window.open('http://www.google.com','_blank');return false;">
-          Link 3
-        </ion-item>
-        <ion-item menu-close href="#/app/calendar">
-          Owlendar
+        <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
+          Contact Us!
         </ion-item>
       </ion-list>
     </ion-content>
