--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
           Contact Us!
         </ion-item>
+        <ion-item ng-style="{'line-height': '100px'}">
+          Color Change!
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
