Updated duties and code

--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -24,6 +24,9 @@
         <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://vksu.kennesaw.edu/','_blank');return false;">
           Volunteer With Us!
         </ion-item>
+        <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('https://www.google.com','_blank');return false;">
+          New Link!
+        </ion-item>
         <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
           Contact Us!
         </ion-item>
