--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -16,18 +16,19 @@
     <ion-header-bar class="bar bar-header bar-dark">
       <h1 class="title">Links</h1>
     </ion-header-bar>
-    <ion-content scroll="true">
+    <!-- <ion-content scroll="true"> -->
+	<ion-content class="custom">
       <ion-list>
-        <ion-item menu-close ng-style="{'line-height': '100px'}"  onClick="window.open('https://owllife.kennesaw.edu/organization/VSLS/calendar/details/691967','_blank');return false;">
+        <ion-item menu-close ng-style="{'line-height': '35px'}"  onClick="window.open('https://owllife.kennesaw.edu/organization/VSLS/calendar/details/691967','_blank');return false;">
          Red Cross Blood Drive!
         </ion-item>
-        <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://vksu.kennesaw.edu/','_blank');return false;">
+        <ion-item menu-close ng-style="{'line-height': '35px'}" onClick="window.open('http://vksu.kennesaw.edu/','_blank');return false;">
           Volunteer With Us!
         </ion-item>
-        <ion-item menu-close ng-style="{'line-height': '100px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
+        <ion-item menu-close ng-style="{'line-height': '35px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
           Contact Us!
         </ion-item>
-        <ion-item ng-style="{'line-height': '100px'}">
+        <ion-item ng-style="{'line-height': '35px'}">
           Color Change!
         </ion-item>
       </ion-list>
