--- a/Owlendar/www/templates/calendar.html
+++ b/Owlendar/www/templates/calendar.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Owlendar Calendar!">
-  <ion-content scroll="true">
+  <ion-content scroll="false">
     <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources">  
   </ion-content>
 </ion-view>
