Edited the name of the application and changed the popover by css and adding elements.

--- a/Owlendar/www/css/style.css
+++ b/Owlendar/www/css/style.css
@@ -32,3 +32,9 @@
 .custom a {
   color: white;  /*Text color for each item, overrides the color property above*/
 }
+
+.popover {
+    background: goldenrod;
+    width: 90%;
+    height: 50%;
+}
