--- a/Owlendar/www/templates/popover.html
+++ b/Owlendar/www/templates/popover.html
@@ -3,8 +3,14 @@
       <h1 class="title">{{ theDate }}</h1>
     </ion-header-bar>
     <ion-content scroll="true">
-      List the events for this day
-      {{ eventsForToday }}
+      <ion-list>
+        <button class="button button-full button-stable">
+          Event 1
+        </button>
+        <button class="button button-full button-stable">
+          Event 2
+        </button>
+      </ion-list>
     </ion-content>
   </ion-popover-view>
 
