--- a/Owlendar/www/templates/calendar.html
+++ b/Owlendar/www/templates/calendar.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Owlendar Calendar!">
   <ion-content scroll="false">
-    <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources">  
+    <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources" class="calendar">  
   </ion-content>
 </ion-view>
