--- a/Owlendar/www/templates/popover.html
+++ b/Owlendar/www/templates/popover.html
@@ -2,12 +2,13 @@
     <ion-header-bar>
       <h1 class="title">{{ theDate }}</h1>
     </ion-header-bar>
+    <ion-nav-view name="details"></ion-nav-view>
     <ion-content scroll="true">
       <ion-list>
-        <button class="button button-full button-stable">
+        <button class="button button-full button-stable"   href="/app/details">
           Event 1
         </button>
-        <button class="button button-full button-stable">
+        <button class="button button-full button-stable"   href="/app/details">
           Event 2
         </button>
       </ion-list>
