Redirect to details.html
It redirects to a blank page when you click "Event 1" in the popover

--- a/Owlendar/www/templates/details.html
+++ b/Owlendar/www/templates/details.html
@@ -4,6 +4,7 @@
     </ion-header-bar>
     <ion-content scroll="true" >
       List the events for this day
-
+      
+      </script>
     </ion-content>
    </ion-nav-view>
