--- a/Owlendar/www/templates/popover.html
+++ b/Owlendar/www/templates/popover.html
@@ -5,12 +5,17 @@
     <ion-nav-view name="details"></ion-nav-view>
     <ion-content scroll="true">
       <ion-list>
-        <button class="button button-full button-stable"   href="/app/details">
-          Event 1
+        <button class="button button-full button-stable" id = 'event1Button' onClick="open('templates\details.html');return false;">
+            Event 1
         </button>
         <button class="button button-full button-stable"   href="/app/details">
           Event 2
         </button>
+        <script type "text/javascript">
+               document.getElementById("event1Button").onclick = function(){
+                 location.href = "templates\details.html"
+               };
+        </script>      
       </ion-list>
     </ion-content>
   </ion-popover-view>
