model not working

--- a/Owlendar/www/templates/calendar.html
+++ b/Owlendar/www/templates/calendar.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Owlendar Calendar!">
+  <ion-nav-view name="calendar"></ion-nav-view>
   <ion-content scroll="false">
     <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources" class="calendar">  
   </ion-content>
