--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
     <ion-nav-bar class="bar bar-header bar-dark">
       <ion-nav-back-button>
@@ -31,7 +31,7 @@
 		      <img src="img/contact.png" width="20"/>
           Contact Us!
         </ion-item>
-        <ion-item ng-style="{'line-height': '35px'}">
+        <ion-item ng-style="{'line-height': '35px'}" ng-click="modal.show()">
 		      <img src="img/personalize.png" width="20"/>
           Color Change!
         </ion-item>
