--- a/Owlendar/www/templates/popover.html
+++ b/Owlendar/www/templates/popover.html
@@ -1,10 +1,29 @@
-  <ion-popover-view>
+ <!-- <ion-popover-view>
     <ion-header-bar>
       <h1 class="title">{{ theDate }}</h1>
     </ion-header-bar>
     <ion-content scroll="true">
       List the events for this day
       {{ eventsForToday }}
+    </ion-content>
+  </ion-popover-view> -->
+
+  <ion-popover-view>
+    <ion-header-bar>
+      <h1 class="title">{{ theDate }}</h1>
+    </ion-header-bar>
+    <ion-content scroll="true">
+		
+		<div class="item item-divider">
+			Event List for this day
+		</div>
+		<ion-list>
+
+      <ion-item ng-repeat="event in arrayEventsForSelectedDay" ng-click="eventItemClicked($index)" >
+		  {{event.title}}
+		</ion-item>
+		</ion-list>
+		
     </ion-content>
   </ion-popover-view>
 
