--- a/Owlendar/www/templates/details.html
+++ b/Owlendar/www/templates/details.html
@@ -8,16 +8,24 @@
 
         <ion-list>
             <ion-item>
-                Event: {{ selectedEvent.title }}
+                Event: American Red Cross Blood Drive- Marietta
+                <!--Event: {{ selectedEvent.title }}-->
             </ion-item>
             <ion-item>
-                Time: {{ selectedEvent.start }}
+                Time: 12:00 PM to 5:00 PM
+                <!--Time: {{ selectedEvent.start }}-->
             </ion-item>
             <ion-item>
-                Location: {{ selectedEvent.location }}
+                Location: Marietta - Wilson Student Center Ballroom
+                <!--Location: {{ selectedEvent.location }}-->
             </ion-item>
             <ion-item>
-                Department: {{ selectedEvent.department }}
+                Department: Volunteerism and Service Learning Support
+                <!--Department: {{ selectedEvent.department }}-->
+            </ion-item>
+            <ion-item>
+                Description: Did you know 1 pint of blood can save up to 3 lives? Or that every 2 seconds someone needs a blood transfusion? 
+                <!--Description: {{ selectedEvent.description }}-->
             </ion-item>
         </ion-list>
         
@@ -35,7 +43,7 @@
 </ion-modal-view>
 
 
-
+<!--
 <item>
 	<title>
 		<![CDATA[
@@ -53,4 +61,4 @@
 	<guid>
 		https://calendar.kennesaw.edu/EventDetails.aspx?data=hHr80o3M7J7JmkwjAp30c%2fHYl%2fw6zDOV5rikI8HES93bc3RUMpisGvx3NwE0ZZvn
 	</guid>
-</item>
+</item>-->
