--- a/Owlendar/www/templates/details.html
+++ b/Owlendar/www/templates/details.html
@@ -7,25 +7,25 @@
     <ion-content scroll="true">
 
         <ion-list>
-            <ion-item>
-                Event: American Red Cross Blood Drive- Marietta
-                <!--Event: {{ selectedEvent.title }}-->
+            <ion-item class = "item-text-wrap">
+                <!--Event: American Red Cross Blood Drive- Marietta-->
+                Event: {{ selectedEvent.title }}
             </ion-item>
-            <ion-item>
-                Time: 12:00 PM to 5:00 PM
-                <!--Time: {{ selectedEvent.start }}-->
+            <ion-item class = "item-text-wrap">
+                <!--Time: 12:00 PM to 5:00 PM-->
+                Time: {{ selectedEvent.start }}
             </ion-item>
-            <ion-item>
-                Location: Marietta - Wilson Student Center Ballroom
-                <!--Location: {{ selectedEvent.location }}-->
+            <ion-item class = "item-text-wrap">
+                <!--Location: Marietta - Wilson Student Center Ballroom-->
+                Location: {{ selectedEvent.location }}
             </ion-item>
-            <ion-item>
-                Department: Volunteerism and Service Learning Support
-                <!--Department: {{ selectedEvent.department }}-->
+            <ion-item class = "item-text-wrap">
+                <!--Department: Volunteerism and Service Learning Support-->
+                Department: {{ selectedEvent.department }}
             </ion-item>
-            <ion-item>
-                Description: Did you know 1 pint of blood can save up to 3 lives? Or that every 2 seconds someone needs a blood transfusion? 
-                <!--Description: {{ selectedEvent.description }}-->
+            <ion-item class = "item-text-wrap">
+                <!--Description: Did you know 1 pint of blood can save up to 3 lives? Or that every 2 seconds someone needs a blood transfusion? -->
+                Description: {{ selectedEvent.description }}
             </ion-item>
         </ion-list>
         
