--- a/Owlendar/www/templates/menu.html
+++ b/Owlendar/www/templates/menu.html
@@ -27,6 +27,10 @@
 		      <img src="img/volunteer.png" width="20"/>
         Volunteer With Us!
         </ion-item>
+        <ion-item menu-close ng-style="{'line-height': '35px'}" onClick="window.open('http://dayofservice.kennesaw.edu/index.php','_blank');return false;">
+		      <img src="https://static1.squarespace.com/static/5382ae03e4b068e56bb6adce/t/5382b358e4b0b23228e17089/1401074521078/QualOT+Logo+Transparent.png " width="20"/>
+          Day of Service!
+        </ion-item>
         <ion-item menu-close ng-style="{'line-height': '35px'}" onClick="window.open('http://studentengagement.kennesaw.edu/contact.php','_blank');return false;">
 		      <img src="img/contact.png" width="20"/>
           Contact Us!
