Displays events in the calendar

--- a/Owlendar/www/templates/calendar.html
+++ b/Owlendar/www/templates/calendar.html
@@ -1,6 +1,7 @@
 <ion-view view-title="Owlendar Calendar!">
   <ion-nav-view name="calendar"></ion-nav-view>
   <ion-content scroll="false">
-    <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources" class="calendar">  
+    <div ui-calendar="uiConfig.calendar" calendar="myCalendar" ng-model="eventSources" class="calendar" id="calendar">
+	  </div>
   </ion-content>
 </ion-view>
