--- a/Owlendar/www/templates/details.html
+++ b/Owlendar/www/templates/details.html
@@ -17,7 +17,7 @@
             </ion-item>
             <ion-item class = "item-text-wrap">
                  <!--Location: Marietta - Wilson Student Center Ballroom-->
-                Author: {{ selectedEvent.author }}
+                Contact: {{ selectedEvent.author }}
             </ion-item>
             <ion-item class = "item-text-wrap">
                 <!--Department: Volunteerism and Service Learning Support-->
@@ -25,7 +25,7 @@
             </ion-item>
             <ion-item class = "item-text-wrap">
                 <!--Description: Did you know 1 pint of blood can save up to 3 lives? Or that every 2 seconds someone needs a blood transfusion? The Donation process takes ... Learn more at redcrossblood.org/rapidpass!-->
-                Description: {{ selectedEvent.description }}
+                Duration: {{ selectedEvent.description }}
             </ion-item>
         </ion-list>
         
